css/template.css
/* General */
html
{
	margin:0;
	padding:0
}

body
{
	font-family: Arial,sans-serif;
    background: url(../images/fond_fonce.jpg) repeat scroll left top transparent;
    color: rgb(200, 197, 203);
    font-family: 'Helvetica', 'Arial', sans-serif;
	margin:0;
	padding:0
}

img1
{
	border:none
}

.clr
{
	clear:both
}

a
{
    color: rgb(203, 203, 203);
    text-decoration: none;
}

a:visited
{
    color: rgb(121, 121, 124);
}

a:hover
{
    color: rgb(188, 38, 44);
}


/* Id */
#cadre_exterieur
{
}

#logo
{
	width:100%;
	height:20px;
	margin:0 auto;
	text-align: center;
/*	background:url(../images/logo.png) center no-repeat;*/
}

#logo h1
{
	margin: 0 auto;
}

#cadre_texte
{
	max-width: 800px;
	margin: 0 auto;
	background: url("../images/fond_clair.jpg") repeat scroll 0% 0% transparent;
	padding: 10px;
}
#chemin
{
	margin-top:5px;
	margin-bottom:10px;
	padding-top:0;
	width:70%;
	float:left;
	font-size:0.8em;
}

#chemin h3
{
	display: none;
}

#recherche
{
	width:30%;
	margin:0;
	margin-bottom:10px;
	padding:0;
	float:right;
	text-align:right;
}

#recherche h3
{
	display: none;
}

#recherche label
{
	margin-right: 10px;
}

#pied_de_page
{
	margin:10px 0;
	text-align:center;
}

div.search input.button
{
	margin-bottom:-10px;
}


/* Id */
#menu_haut
{
}

#menu_haut h3
{
	display: none;
}

#menu_haut ul
{
	display: block;
	text-align: center;
	background: url("../images/fond_clair.jpg") repeat scroll 0% 0% transparent;
	border-top:1px solid #808080;
	border-bottom:1px solid #808080;
	margin: 0px auto;;
	max-width: 800px;
	padding: 10px;
}

#menu_haut li
{
	display: inline;
	margin: 5px 10px;
	text-transform:uppercase;
    font-family: Futura,'Trebuchet MS',sans-serif;
    font-size: 1.2em;
    color: rgb(193, 193, 193);
    line-height: 25px;
    text-align: center;
}


#menu_haut li a
{
    color: rgb(203, 203, 203);
    text-decoration: none;
}

#menu_haut li a:visited
{
    color: rgb(121, 121, 124);
}

#menu_haut li a:hover
{
    color: rgb(188, 38, 44);
}

#menu_haut li.active a
{
	font-weight: bold;
}

ul.actions
{
	display: block;
	float: right;
}

ul.actions li
{
	display: inline;
	margin: 5px 10px;
	text-transform:uppercase;
    font-family: Futura,'Trebuchet MS',sans-serif;
    font-size: 1.5em;
    color: rgb(193, 193, 193);
    line-height: 25px;
    text-align: center;
}

dl.article-info dt
{
	display: none;
}

p.paragraph_style_1
{
	margin-top: 0px;
}

h2
{

	margin-top: 0px;
}

